--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "calculator",
-  "homepage": "https://nikitoqq.github.io/calculator/",  "version": "0.1.0",
+  "homepage": "https://nikitoqq.github.io/calculator/",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
     "gh-pages": "^6.3.0",
+    "node": "^23.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
@@ -13,8 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
